# page0egap-codecrafters-kafka

./: Cargo.toml  README.md
src/: a.txt  consts.rs  globals.rs  header.rs  lib.rs  main.rs  records.rs  request.rs  response.rs  structs.rs  traits.rs
src/common_structs/: tagged_field.rs
src/consts/: api_versions.rs  describe_topic_partitions.rs  fetch.rs
src/records/: record_header.rs  record_value.rs  utils.rs
src/request/: api_key.rs  body.rs  error.rs  header.rs  request_body.rs  utils.rs
src/request/body/: api_versions.rs  describe_topic_partitions.rs  fetch.rs
src/response/: error_code.rs  response_body.rs  response_header.rs  utils.rs
src/response/response_body/: api_versions.rs  describe_topic_partitions.rs  fetch.rs
src/structs/: tagged_field.rs
