[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
binrw = "0.14.1"
byteorder = "1.5.0"
bytes = "1.3.0"                                  # helps manage buffers
crc = "3.2.1"
integer-encoding = "4.0.2"
num_enum = "0.7.3"
# serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0.38"                             # error handling
